Scrollbar stylen + little bug fix

--- a/src/components/ChangeLog/ChangeLogEntry.scss
+++ b/src/components/ChangeLog/ChangeLogEntry.scss
@@ -1,8 +1,9 @@
 $yellow: #D0BB57;
 
 .changelog-entry {
-  font-size: 26px;
+  font-size: 22px;
   padding-bottom: 10px;
+  font-family: 'Roboto', sans-serif;
 
   &__date {
     color: rgba(0,0,0, 0.7)
