--- a/src/pages/ChangeLogView/ChangeLogView.scss
+++ b/src/pages/ChangeLogView/ChangeLogView.scss
@@ -26,6 +26,32 @@ $yellow: #D0BB57;
     padding-left: 1%;
   }
 
+  .scrollbar
+  {
+    background: #F5F5F5;
+    overflow-y: scroll;
+  }
+
+  .scrollbar::-webkit-scrollbar-track
+  {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+  }
+
+  .scrollbar::-webkit-scrollbar
+  {
+    width: 12px;
+    background-color: #F5F5F5;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb
+  {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #555;
+  }
+
   &__changeList {
     list-style: circle;
     align-items: center;
